--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,10 @@
   background-color: rgb(0, 0, 0);
 }
 
+.display-linebreak {
+  white-space: pre-line;
+}
+
 .page_content {
   background-color: white;
   position: relative;
