--- a/src/components/projects/styles/allProjects.module.css
+++ b/src/components/projects/styles/allProjects.module.css
@@ -17,6 +17,8 @@
 
 @media (max-width: 600px) {
   .all_projects_project {
-    width: calc(100% / 2);
+    width: max-content;
+    padding-bottom: -100px;
+    margin-bottom: -50px;
   }
 }
