--- a/src/components/projects/styles/projects.module.css
+++ b/src/components/projects/styles/projects.module.css
@@ -14,6 +14,10 @@
   z-index: 999;
 }
 
+.projects_list {
+  display: flex;
+}
+
 .projects_container {
   display: flex;
   flex-direction: column;
@@ -29,5 +33,9 @@
 
   .projects_project {
     width: calc(100% / 2);
+  }
+
+  .projects_list {
+    display: block;
   }
 }
